postgres/templates/networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-consumer-to-postgres
  namespace: consumer
spec:
  podSelector:
    matchLabels:
      app: postgres
      role: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: consumer-pod
        - namespaceSelector:
            matchLabels:
              name: vector
        - podSelector:
            matchLabels:
              app: cve-vector-store
      ports:
        - protocol: TCP
          port: 5432
